@startuml Assessment Management Tool - ERD

' Styling
skinparam linetype ortho
skinparam backgroundColor #FFFFFF

entity "User\n(app_user)" as user {
  * **id** : UUID <<PK>>
  --
  * name : VARCHAR(500)
  * email : VARCHAR(255) <<UNIQUE>>
  * password_hash : VARCHAR(255)
  * base_type : VARCHAR(50)
  * is_exams_officer : BOOLEAN
  * created_at : TIMESTAMP
}

entity "Module" as module {
  * **id** : UUID <<PK>>
  --
  * code : VARCHAR(50) <<UNIQUE>>
  * title : VARCHAR(500)
}

entity "Assessment" as assessment {
  * **id** : UUID <<PK>>
  --
  * module_id : UUID <<FK>>
  * title : VARCHAR(500)
  * type : VARCHAR(20)
  * current_state : VARCHAR(50)
  exam_date : DATE
  description : CLOB
  file_name : VARCHAR(255)
  file_url : VARCHAR(500)
  version : BIGINT
}

entity "Module Staff Role\n(module_staff_role)" as module_staff {
  * **id** : UUID <<PK>>
  --
  * module_id : UUID <<FK>>
  * user_id : UUID <<FK>>
  * role : VARCHAR(50)
  --
  <<UNIQUE>> (module_id, user_id, role)
}

entity "Assessment Role\n(assessment_role)" as assessment_role {
  * **id** : UUID <<PK>>
  --
  * assessment_id : UUID <<FK>>
  * user_id : UUID <<FK>>
  * role : VARCHAR(20)
  --
  <<UNIQUE>> (assessment_id, user_id, role)
}

entity "Module External Examiner\n(module_external_examiner)" as module_ee {
  * **id** : UUID <<PK>>
  --
  * module_id : UUID <<FK>>
  * examiner_id : UUID <<FK>>
  --
  <<UNIQUE>> (module_id, examiner_id)
}

entity "Assessment Transition\\n(assessment_transition)" as transition {
  * **id** : UUID <<PK>>
  --
  * assessment_id : UUID <<FK>>
  * from_state : VARCHAR(50)
  * to_state : VARCHAR(50)
  * by_user_id : UUID <<FK>>
  * at : TIMESTAMP
  * by_display_name : VARCHAR(255)
  note : VARCHAR(2000)
  is_override : BOOLEAN
  is_reversion : BOOLEAN
  reverted_transition_id : UUID <<FK>>
}

entity "Checker Feedback\\n(checker_feedback)" as checker_feedback {
  * **id** : UUID <<PK>>
  --
  * assessment_id : UUID <<FK>>
  * author_user_id : UUID <<FK>>
  * text : VARCHAR(5000)
  secure_doc_ref : VARCHAR(500)
  * created_at : TIMESTAMP
}

entity "External Examiner Feedback\\n(external_examiner_feedback)" as ee_feedback {
  * **id** : UUID <<PK>>
  --
  * assessment_id : UUID <<FK>> <<UNIQUE>>
  * examiner_user_id : UUID <<FK>>
  * feedback : VARCHAR(5000)
  * created_at : TIMESTAMP
}

entity "Setter Response\\n(setter_response)" as setter_resp {
  * **id** : UUID <<PK>>
  --
  * assessment_id : UUID <<FK>> <<UNIQUE>>
  * author_user_id : UUID <<FK>>
  * response_text : VARCHAR(5000)
  secure_doc_ref : VARCHAR(500)
  * created_at : TIMESTAMP
}

entity "CSV Import Job\\n(csv_import_job)" as csv_job {
  * **id** : UUID <<PK>>
  --
  * file_name : VARCHAR(500)
  * created_at : TIMESTAMP
  * status : VARCHAR(20)
  errors : VARCHAR(5000)
}

' Relationships
module ||--o{ assessment : "contains"
module ||--o{ module_staff : "has staff"
module ||--o{ module_ee : "has examiners"

user ||--o{ module_staff : "has roles in"
user ||--o{ assessment_role : "assigned to"
user ||--o{ module_ee : "examines"
user ||--o{ transition : "performs"

assessment ||--o{ assessment_role : "has roles"
assessment ||--o{ transition : "has history"
assessment ||--o| ee_feedback : "may have (EXAM only)"
assessment ||--o| setter_resp : "may have (EXAM only)"
assessment ||--o{ checker_feedback : "has feedback"

user ||--o{ checker_feedback : "provides"
user ||--o{ ee_feedback : "provides"
user ||--o{ setter_resp : "authors"

note right of user
  **User Base Types:**
  - TEACHING_SUPPORT
  - ACADEMIC
  - EXTERNAL_EXAMINER
  
  **Exams Officer:**
  Can only be ACADEMIC
end note

note right of module_staff
  **Module Roles:**
  - MODULE_LEAD (mandatory)
  - MODERATOR (mandatory)
  - STAFF (optional)
end note

note right of assessment
  **Assessment Types:**
  - CW (Coursework)
  - TEST
  - EXAM
  
  **Assessment States:**
  See workflow diagram
  for complete state machine
  
  **Content Fields:**
  - description, file_name, file_url
  Added in V3 migration
end note

note right of assessment_role
  **Assessment Roles:**
  - SETTER (creates)
  - CHECKER (approves)
  
  Checker must be independent
  (not module lead/staff/setter)
end note

@enduml
